// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link with target blank  1`] = `
Object {
  "component": <div>
    <a
      className={null}
      href="https://themarker.com"
      onClick={null}
      target="_blank"
    >
      The Marker
    </a>
  </div>,
  "styles": "",
}
`;

exports[`Link within paragraph component  1`] = `
Object {
  "component": <div>
    <a
      className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h htz-i htz-j htz-k htz-l htz-m htz-n htz-o"
      href="http://www.iflscience.com/physics/new-type-of-bizarre-quantum-material-discovered/"
      onClick={null}
      target="_blank"
    >
      <span>
        New Type Of 
        <strong
          className="htz-p"
        >
          Bizarre Quantum Material
        </strong>
         Discovered.
      </span>
    </a>
  </div>,
  "styles": ".htz-a{border-bottom-color:#0B7EB5}.htz-b{border-bottom-width:1px}.htz-c{border-bottom-style:solid}.htz-d{transition-property:all}.htz-e{transition-duration:.25s}.htz-f{transition-timing-function:cubic-bezier(.55, 0, .1, 1)}.htz-g:visited{color:#2D2D2D}.htz-h:hover{color:#0B7EB5}.htz-i:hover{border-bottom-color:transparent}.htz-j:focus{color:#0B7EB5}.htz-k:focus{border-bottom-color:#0B7EB5}.htz-l:active{color:#0B7EB5}.htz-m:active{border-bottom-color:#0B7EB5}.htz-n{-webkit-transition-property:all}.htz-o{-moz-transition-property:all}.htz-p{font-weight:700}",
}
`;

exports[`Simple link  1`] = `
Object {
  "component": <div>
    <a
      className={null}
      href="https://www.haaretz.co.il"
      onClick={null}
    >
      Haaretz
    </a>
  </div>,
  "styles": "",
}
`;

exports[`override "children" with content 1`] = `
Object {
  "component": <div>
    <a
      className={null}
      href="https://www.haaretz.co.il"
      onClick={null}
    >
      Haaretz
    </a>
  </div>,
  "styles": "",
}
`;

exports[`render content from "children" 1`] = `
Object {
  "component": <div>
    <a
      className={null}
      href="https://www.haaretz.co.il"
      onClick={null}
    >
      test content
    </a>
  </div>,
  "styles": "",
}
`;
